fix truncate on DnD

--- a/src/client/components/DnDList/DnDListItem.less
+++ b/src/client/components/DnDList/DnDListItem.less
@@ -3,25 +3,32 @@
 
 .dnd-list-item {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 12px;
   border: @base-border;
   border-radius: 4px;
 
-  &__ckeckbox {
-    display: flex;
-    justify-content: start;
-    .ant-checkbox-wrapper {
-      padding-right: 7px;
-    }
+  .ant-checkbox-wrapper {
+    width: 25px;
+    padding-right: 7px;
   }
 
-  &__name {
-    font-weight: 500;
-    overflow: hidden;
-  }
-  &__type {
-    opacity: 0.7;
+  .dnd-list-content {
+    width: calc(100% - 30px);
+    display: flex;
+    justify-content: space-between;
+
+    &__name {
+      font-weight: 500;
+      overflow: hidden;
+      padding-right: 4px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+
+    &__type {
+      opacity: 0.7;
+    }
   }
 }
